# Grupo01_progp_cuda

./: CMakeLists.txt  Ejercicio1.cu  histograma.cu
